--- a/CameraCalibrator/CameraCalibrator.vcxproj
+++ b/CameraCalibrator/CameraCalibrator.vcxproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="calibration_tools.h" />
+    <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
