--- a/CameraCalibrator/CameraCalibrator.vcxproj.filters
+++ b/CameraCalibrator/CameraCalibrator.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="calibration_tools.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="main.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
