--- a/CameraCalibrator/CameraCalibrator.vcxproj
+++ b/CameraCalibrator/CameraCalibrator.vcxproj
@@ -76,12 +76,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="calibration_tools.cpp" />
+    <ClCompile Include="camera_calibration.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="calibration_tools.h" />
-    <ClInclude Include="main.h" />
+    <ClInclude Include="camera_calibration.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
