--- a/CameraCalibrator/CameraCalibrator.vcxproj.filters
+++ b/CameraCalibrator/CameraCalibrator.vcxproj.filters
@@ -18,15 +18,12 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="calibration_tools.cpp">
+    <ClCompile Include="camera_calibration.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="calibration_tools.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="main.h">
+    <ClInclude Include="camera_calibration.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
